--- a/templates/urls.html
+++ b/templates/urls.html
@@ -1,12 +1,10 @@
 {{define "title"}}Target URL{{end}}
 
-{{define "head"}}
-<!-- Tidak ada <head> tambahan untuk halaman ini -->
-{{end}}
+{{define "head"}}{{end}}
 
 {{define "content"}}
 
-<!-- KARTU TAMBAH URL -->
+<!-- TAMBAH URL BARU -->
 <div class="card">
     <h2 class="card-title">
         <svg class="icon" fill="currentColor" viewBox="0 0 24 24">
@@ -25,7 +23,7 @@
     </form>
 </div>
 
-<!-- KARTU DAFTAR TARGET URL -->
+<!-- DAFTAR TARGET URL -->
 <div class="card">
     <h2 class="card-title">
         <svg class="icon" fill="currentColor" viewBox="0 0 24 24">
@@ -125,5 +123,5 @@
         </table>
     </div>
 </div>
-{{end}}
 
+{{end}}
