--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,9 +14,9 @@
     
     <div class="sidebar">
         <div class="logo">
-            <div class="logo-image">
+            <!-- <div class="logo-image">
                 <img src="/static/logo.png" alt="Awan Teknologi Inovasi">
-            </div>
+            </div> -->
             <h1>ID Probe Status</h1>
             <p>Monitoring System</p>
         </div>
