--- a/templates/urls.html
+++ b/templates/urls.html
@@ -10,7 +10,7 @@
         <svg class="icon" fill="currentColor" viewBox="0 0 24 24">
             <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"/>
         </svg>
-        Tambah URL Baru
+        Create New URL
     </h2>
     <form action="/add" method="POST" class="input-group">
         <input type="text" name="url" placeholder="Contoh: cloudtech.id" required>
@@ -18,7 +18,7 @@
             <svg class="icon" fill="currentColor" viewBox="0 0 24 24">
                 <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
             </svg>
-            Tambah
+            Add
         </button>
     </form>
 </div>
@@ -29,7 +29,7 @@
         <svg class="icon" fill="currentColor" viewBox="0 0 24 24">
             <path d="M3 13h2v-2H3v2zm0 4h2v-2H3v2zm0-8h2V7H3v2zm4 4h14v-2H7v2zm0 4h14v-2H7v2zM7 7v2h14V7H7z"/>
         </svg>
-        Daftar Target URL
+        URL List
     </h2>
     <div class="table-wrapper">
         <table>
@@ -51,7 +51,7 @@
                         <svg class="icon" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"/>
                         </svg>
-                        <span>Kode Status</span>
+                        <span>Status Code</span>
                     </th>
                     <th>
                         <svg class="icon" fill="currentColor" viewBox="0 0 24 24">
@@ -75,13 +75,13 @@
                         <svg class="icon" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"/>
                         </svg>
-                        <span>Terakhir Dicek</span>
+                        <span>Last Checked</span>
                     </th>
                     <th>
                         <svg class="icon" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"/>
                         </svg>
-                        <span>Aksi</span>
+                        <span>Action</span>
                     </th>
                 </tr>
             </thead>
@@ -110,13 +110,13 @@
                             <svg class="icon" fill="currentColor" viewBox="0 0 24 24">
                                 <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"/>
                             </svg>
-                            Hapus
+                            Delete
                         </a>
                     </td>
                 </tr>
                 {{else}}
                 <tr>
-                    <td colspan="8" class="empty-state">Belum ada URL. Silakan tambahkan.</td>
+                    <td colspan="8" class="empty-state">No URLs available. Please add one.</td>
                 </tr>
                 {{end}}
             </tbody>
